# Gin

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md
src/: app.cpp  app.hpp  editor.cpp  editor.hpp  example-usage.hpp  files.cpp  files.hpp  gui.cpp  gui.hpp  intro-hub.cpp  intro-hub.hpp  main.cpp  project.cpp  project.hpp  text.cpp  text.hpp
